# workoutstudy_chatting/handler/fit_mate_handler.go
@@ -18,6 +18,14 @@ func NewFitMateHandler(fitmateService service.FitMateService) *fitMateHandler {
 	}
 }
 
+// @Summary 피트그룹 조회 API
+// @Description userId 로 해당 사용자가 속해 있는 피트그룹들의 정보를 조희
+// @Tags fitmate
+// @Accept  json
+// @Produce  json
+// @Param userId query int true  "사용자 ID, fitMateId 가 아님.""
+// @Success 200 {object} model.FitGroup
+// @Router /retrieve/fit-group [get]
 func (h *fitMateHandler) RetrieveFitGroupByMateID(c *gin.Context) {
 	userID := c.Query("userId")
 
